# seedo

./: CHANGELOG.md  Cargo.toml  README.md  seedo.toml
src/: glob_watcher.rs  main.rs
