[package]
name = "watchme"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.60"
clap = { version = "3.2.16", features = ["derive"] }
ignore = "0.4.18"
notify.version = "5.0.0-pre.15"
tokio = { version = "1.20.1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
    "process",
] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

# tokio = { version = "1.20.1", features = ["macros", "rt-multithread"] }
