[package]
name = "seedo"
version = "0.1.1"
edition = "2021"
authors = ["Andrew Burkett <burkett.andrew@gmail.com>"]
description = "A command runner triggered by filesystem events"
repository = "https://github.com/drewkett/seedo"
license = "Unlicense"

[dependencies]
anyhow = "1.0.60"
clap = { version = "3.2.16", features = ["derive"] }
ignore = "0.4.18"
notify.version = "5.0.0-pre.15"
tokio = { version = "1.20.1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
    "process",
] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
