[package]
name = "seedo"
version = "0.1.3"
edition = "2021"
authors = ["Andrew Burkett <burkett.andrew@gmail.com>"]
description = "A command runner triggered by filesystem events"
repository = "https://github.com/drewkett/seedo"
license = "Unlicense"

[dependencies]
anyhow = "1.0.60"
bstr = "0.2.17"
clap = { version = "3.2.16", features = ["derive"] }
crossbeam-channel = "0.5.6"
glob = "0.3.0"
ignore = "0.4.18"
notify.version = "5.0.0-pre.15"
os_str_bytes = "6.3.0"
path-absolutize = "3.0.13"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
shlex = "1.1.0"
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
